MP2-2439 Added dialogs and workPackageId, fixed accepted files, fixed alignment

--- a/jems-ui/src/app/project/project-application/report/partner-report-detail-page/partner-report-actions/partner-actions-cell.component.scss
+++ b/jems-ui/src/app/project/project-application/report/partner-report-detail-page/partner-report-actions/partner-actions-cell.component.scss
@@ -6,4 +6,11 @@ button {
   display: flex;
 }
 
+::ng-deep .tooltip  {
+   word-break: break-all !important;
+   white-space: pre-line !important;
+}
 
+.file-name-chip :hover{
+  cursor: pointer;
+}
