--- a/jems-ui/src/app/project/project-application/report/partner-report-detail-page/partner-report-work-plan-progress-tab/partner-report-work-plan-progress-tab.component.scss
+++ b/jems-ui/src/app/project/project-application/report/partner-report-detail-page/partner-report-work-plan-progress-tab/partner-report-work-plan-progress-tab.component.scss
@@ -1,5 +1,5 @@
 .work-package-panel {
-  max-width: 80rem !important;
+  max-width: 92rem !important;
 }
 
 .activity-container {
@@ -18,13 +18,17 @@
     background-color: var(--light-blue-gray);
     min-width: 70rem !important;
 
-   span:nth-child(2) {
-     padding-left: 5.5vw;
-     padding-right: 15rem;
+    span:nth-child(2) {
+      padding-left: 2vw;
+      padding-right: 15rem;
     }
 
-   span:last-child {
-     padding-left: 4.5vw;
+    .progress-header-column {
+      padding-left: 3vw;
+    }
+
+    .attachments-header-column {
+      padding-left: 19vw;
     }
   }
 
@@ -36,11 +40,15 @@
     width: 100%;
 
     span:nth-child(2) {
-      padding-left: 3vw;
+      padding-left: 4vw;
     }
 
-    :last-child {
-      padding-left: 4vw;
+    .progress-element {
+      padding-left: 2vw;
+    }
+
+    .attachments-element {
+      padding-left: 1.7vw;
     }
   }
 }
@@ -52,6 +60,10 @@
 
 .justify-start {
   justify-content: start;
+}
+
+.attachments-element-deliverable {
+  padding-left: 6.5vw;
 }
 
 
